dsl-playground/src/main/resources/Test1.g4
grammar Test1;

start : expression EOF;

expression :
    INT |
    expression '+' expression |
    expression '-' expression |
    expression '/' expression |
    expression '*' expression;

INT: '0'..'9'+;
